--- a/package.json
+++ b/package.json
@@ -6,30 +6,37 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "clean": "rm -rf .next node_modules/.cache"
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.0",
-    "@hookform/resolvers": "^5.1.1",
-    "@refinedev/antd": "^5.46.2",
-    "@refinedev/core": "^4.57.10",
-    "@refinedev/react-hook-form": "^4.10.2",
-    "@refinedev/simple-rest": "^5.0.10",
+    "@hookform/resolvers": "^3.3.0",
+    "@tanstack/react-query": "^5.0.0",
     "antd": "^5.15.0",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
-    "zod": "^4.0.5"
+    "zod": "^3.22.0",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@types/jest": "^29.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
+    "jest": "^29.0.0",
+    "jest-environment-jsdom": "^29.0.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
