--- a/env.example
+++ b/env.example
@@ -9,11 +9,9 @@ PORT=3000
 HOSTNAME=0.0.0.0
 
 # API Configuration
-API_BASE_URL=http://localhost:8000/api/v1
+NEXT_PUBLIC_API_BASE_URL=http://localhost:8000/api/v1
 
-# NextAuth (session management)
-NEXTAUTH_SECRET=your-nextauth-secret
-NEXTAUTH_URL=http://localhost:3000
+
 
 # File Storage (for CMS uploads)
 UPLOAD_DIR=./uploads
