--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "clean": "rm -rf .next node_modules/.cache",
-    "export": "next export"
+    "export": "next build"
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.0",
@@ -33,7 +33,11 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.0",
-    "zustand": "^4.5.7"
+    "zustand": "^4.5.7",
+    "react-easy-crop": "^5.0.5",
+    "@tiptap/react": "^2.6.6",
+    "@tiptap/starter-kit": "^2.6.6",
+    "@tiptap/extension-text-style": "^2.6.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
